fix(roles): govern permission mutations